# gate

./: CMakeLists.txt
.github/workflows/: build.yml
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web-ui/: index.html
web-ui/src/: App.tsx  index.css
web-ui/src/components/: GateVisualizer.tsx
web-ui/src/hooks/: useVisualizerData.ts
